src-tauri/tests/snapshots/parsers_snapshot__gemini_detail.snap
---
source: tests/parsers_snapshot.rs
expression: detail
---
{
  "summary": {
    "id": "gemini-sess-001",
    "agent_type": "gemini",
    "folder_path": "/Users/test/workspace/demo",
    "folder_name": "demo",
    "title": "ping",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "gemini-2.5-pro",
    "git_branch": null
  },
  "turns": [
    {
      "id": "turn-0",
      "role": "user",
      "blocks": [
        {
          "type": "text",
          "text": "ping"
        }
      ],
      "timestamp": "[ts]",
      "completed_at": "[ts]"
    },
    {
      "id": "turn-1",
      "role": "assistant",
      "blocks": [
        {
          "type": "text",
          "text": "pong"
        }
      ],
      "timestamp": "[ts]",
      "usage": {
        "input_tokens": 10,
        "output_tokens": 20,
        "cache_creation_input_tokens": 0,
        "cache_read_input_tokens": 3
      },
      "model": "gemini-2.5-pro",
      "completed_at": "[ts]"
    }
  ],
  "session_stats": {
    "total_usage": {
      "input_tokens": 10,
      "output_tokens": 20,
      "cache_creation_input_tokens": 0,
      "cache_read_input_tokens": 3
    },
    "total_tokens": 33,
    "total_duration_ms": 0,
    "context_window_used_tokens": 33,
    "context_window_max_tokens": 1000000,
    "context_window_usage_percent": 0.0033000000000000004
  }
}
