src-tauri/tests/snapshots/parsers_snapshot__openclaw_detail.snap
---
source: tests/parsers_snapshot.rs
expression: detail
---
{
  "summary": {
    "id": "test-agent/openclaw-sess-001",
    "agent_type": "open_claw",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "Hello",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "gpt-5.4",
    "git_branch": null
  },
  "turns": [
    {
      "id": "turn-0",
      "role": "user",
      "blocks": [
        {
          "type": "text",
          "text": "Hello"
        }
      ],
      "timestamp": "[ts]",
      "completed_at": "[ts]"
    },
    {
      "id": "turn-1",
      "role": "assistant",
      "blocks": [
        {
          "type": "text",
          "text": "Hi"
        }
      ],
      "timestamp": "[ts]",
      "usage": {
        "input_tokens": 100,
        "output_tokens": 50,
        "cache_creation_input_tokens": 0,
        "cache_read_input_tokens": 200
      },
      "model": "gpt-5.4",
      "completed_at": "[ts]"
    }
  ],
  "session_stats": {
    "total_usage": {
      "input_tokens": 100,
      "output_tokens": 50,
      "cache_creation_input_tokens": 0,
      "cache_read_input_tokens": 200
    },
    "total_tokens": 350,
    "total_duration_ms": 0,
    "context_window_used_tokens": 350,
    "context_window_max_tokens": 258000,
    "context_window_usage_percent": 0.13565891472868216
  }
}
